<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ethos LED</string>
    <string name="enter_username">Enter Twitter/X username</string>
    <string name="show_score">Show Score</string>
    <string name="brightness">Brightness</string>
    <string name="color">Color</string>
    <string name="auto_refresh">Auto-refresh (every minute)</string>
    <string name="refresh_now">Refresh Now</string>
    <string name="led_control">LED Control</string>
    <string name="power_on">Power ON</string>
    <string name="power_off">Power OFF</string>
    <string name="clear_screen">Clear Screen</string>
    <string name="use_tier_color">Use Tier Color</string>
    <string name="led_connected">LED Connected</string>
    <string name="led_disconnected">LED Disconnected</string>
    <string name="power">Power</string>
    <string name="updated">Updated</string>
    <string name="enter_username_below">Enter username below</string>
    <string name="connect_to_led">Connect to LED</string>
    <string name="disconnect">Disconnect</string>
    <string name="bluetooth_permission_required">Bluetooth permission required</string>
    <string name="bluetooth_not_enabled">Please enable Bluetooth in settings</string>
    <string name="send_to_led">Send to LED</string>
    <string name="led_not_connected">LED not connected. Connect first!</string>
</resources>


